# BioBeamerLauncher

./: .gitignore  DEBUGGING.md  ReadMe.md  launcher.py  make_release.py  pyproject.toml  pytest.ini
config/: launcher.ini  launcher.ini.example
scripts/: setup.bat  setup.sh  start.bat  start.sh
src/biobeamer_launcher/: __init__.py  launcher.py
tests/: conftest.py  test_biobeamer_entry_point.py  test_installation.py  test_launcher.py  test_launcher_integration.py  test_launcher_log_files.py  test_launcher_real_integration.py  test_print_launcher_config.py
