[project]
name = "biobeamer-launcher"
version = "0.1.0"
description = "Launcher for BioBeamer with config fetching and version management."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "lxml"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.setuptools]
packages = ["biobeamer_launcher"]
package-dir = {"" = "src"}
